...
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:minHeight="80dp"
                    android:onClick="onStripTestsClick"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/stripTest"
                    android:visibility="gone"
                    android:textAlignment="viewStart"
                    android:textColor="?longButtonText" />

                <Button
                    android:id="@+id/buttonCalibrate"
...
