...
    <!--Result Screen-->
    <string name="acceptResult">Accept Result</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>

    <!--Permission-->
    <string name="cameraPermissions">Camera permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>
...
