...
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTitration1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:maxLength="9"
...
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="@dimen/default_text_size"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTitration2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:maxLength="9"
...
