...
        android:selectAllOnFocus="true"
        android:title="Sampling interval"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:iconSpaceReserved="false" />
    <EditTextPreference
        android:defaultValue="12"
        android:dialogMessage="Number of samples (max 100)"
        android:inputType="number"
        android:key="@string/colif_numberOfSamplesKey"
        android:maxLength="3"
        android:selectAllOnFocus="true"
        android:title="Number of samples"
...
